Add link to the presentation.

--- a/presentation.tex
+++ b/presentation.tex
@@ -73,15 +73,17 @@ stringstyle=\color{red}\ttfamily,
 
 
 \author[AJW]% (optional, use only with lots of authors)
-{Alejandro Weinstein \\ alejandro.weinstein@uv.cl, @ajweinstein}
+{Alejandro Weinstein \\ alejandro.weinstein@uv.cl \\ @ajweinstein \\
+  \vspace{2ex}
+\url{https://github.com/aweinstein/evic2017}}
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
 
 \institute[UV] % (optional, but mostly needed)
-{Escuela de Ingeniería Biomédica \\
-Universidad de Valparaíso}
+{Escuela de Ingeniería Biomédica de la Universidad de Valparaíso \\
+Advanced Center for Electrical and Electronics Engineering}
 
-\date {13 de diciembre de 2017}% (optional)
+\date {EVIC 2017, 13 de diciembre de 2017}% (optional)
 
 %\input{../macros.tex}
 \graphicspath{{figures/}}
